# base-django-backend-and-ui

django-backend/: .env.example  .gitignore  manage.py  pyproject.toml
django-backend/app_user/: models.py  utils.py
django-backend/app_user/migrations/: 0001_initial.py  0002_appuser_date_of_birth_appuser_first_name_and_more.py
django-backend/app_user/models/: __init__.py  code_security_manager.py  logger.py  user.py
django-backend/django_backend/: asgi.py  settings.py  wsgi.py
django-backend/django_backend/settings/: base.py  development.py  production.py
