[tool.poetry]
name = "django-backend"
version = "0.1.0"
description = ""
authors = ["Rodrigo Parra <contact@rodrigoparra.com>"]
readme = "README.md"
packages = [{include = "django_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
python-dotenv = "^1.0.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"


[tool.poetry.group.doc.dependencies]
coreapi = "^2.3.3"
pyyaml = "^6.0"
drf-yasg = "^1.21.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
